# C-Code-Review-v2

./: .gitignore  .vercel.json.swp  AGENTS.md  CLAUDE.md  README.md  README2.md  SKILLS.md  dev.sh  vercel.json
.github/workflows/: backend-tests.yml
backend/: .env  .env.example  AGENTS.md  SETUP.md  SKILLS.md  main.py  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serverless.yml  worker.py
backend/.serverless/: cloudformation-template-update-stack.json  meta.json  requirements.txt  serverless-state.json
backend/api/: AGENTS.md  SKILLS.md  routes.py  schemas.py
backend/cache/: AGENTS.md  SKILLS.md  redis.py
backend/core/: AGENTS.md  SKILLS.md  heuristics.py  parser.py  triage.py
backend/github/: __init__.py  webhook.py
backend/github_utils/: AGENTS.md  SKILLS.md  client.py  diff_parser.py  webhook.py
backend/layer/python/api/: routes.py
backend/layer/python/cache/: __init__.py
backend/layer/python/core/: __init__.py  heuristics.py  parser.py
backend/layer/python/llm/: schemas.py
backend/layer/python/workers/: __init__.py  pipeline.py  pool.py
backend/llm/: AGENTS.md  SKILLS.md  __init__.py  client.py  client_llm.py  prompts.py  schemas.py
backend/tests/: test_heuristics.py  test_parser.py  test_triage.py  test_webhook.py
backend/workers/: AGENTS.md  SKILLS.md  pipeline.py  pool.py
docs/ai-dev/: README.md
frontend/: .env.local.example  AGENTS.md  SKILLS.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: AGENTS.md  SKILLS.md  globals.css  layout.tsx  page.tsx
(+39 files in other folders)
