[project]
name = "c-code-review"
version = "0.1.0"
description = "Intelligent C code review system with AST analysis and LLM insights"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-c>=0.24.0",
    "rapidfuzz>=3.10.0",
    "PyGithub>=2.5.0",
    "google-generativeai>=0.8.0",
    "upstash-redis>=1.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
